# Sudoku_CPP

./: CMakeLists.txt
include/: board.hpp  board_factory.hpp  bot.hpp  log.hpp  random_generator.hpp  rules.hpp  window_basic_sudoku.hpp
src/: board.cpp  board_factory.cpp  bot.cpp  main.cpp  random_generator.cpp  rules.cpp  window_basic_sudoku.cpp
